--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -181,9 +181,7 @@
         opacity: 0;
     }
 
-    @include tablet {
-        // transform: translateX(100%);
-    }
+    @include tablet {}
 
     @include desktop {
         top: 50%;
