--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,8 +1,10 @@
 .featers {
     padding-top: 60px;
+    padding-bottom: 60px;
 
     @include desktop {
         padding-top: 94px;
+        padding-bottom: 94px;
     }
 }
 
