--- a/css/main.css
+++ b/css/main.css
@@ -1263,40 +1263,30 @@ body {
   outline: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.footer-input::-moz-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+}
+.footer-input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+}
+.footer-input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+}
 .footer-input:focus {
   border: 1px solid var(--accent-color);
 }
 @media screen and (min-width: 1200px) {
   .footer-input {
     width: 358px;
-  }
-}
-
-.footer-label {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  color: rgba(255, 255, 255, 0.6);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  padding: 15px;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-input:not(:-moz-placeholder-shown) + .footer-label {
-  opacity: 0;
-}
-.footer-input:not(:-ms-input-placeholder) + .footer-label {
-  opacity: 0;
-}
-.footer-input:focus + .footer-label, .footer-input:not(:placeholder-shown) + .footer-label {
-  opacity: 0;
-}
-@media screen and (min-width: 1200px) {
-  .footer-label {
-    top: 50%;
-    transform: translateY(-50%);
   }
 }
 
@@ -1322,9 +1312,25 @@ body {
 /* __________FILTERS___________ */
 .filters {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   gap: 8px;
-  margin-bottom: 34px;
+  margin-bottom: 40px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .filters {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filters {
+    margin-bottom: 34px;
+  }
+}
+
+.filters-item {
+  max-width: 130px;
 }
 
 /* __________PORTFOLIO-CONTENT___________ */
