--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 }
 
 .backdrop {
+  padding: 0px 15px;
   position: fixed;
   top: 0;
   width: 100%;
@@ -306,10 +307,12 @@ body {
   line-height: 1.1666666667;
   letter-spacing: 0.03em;
   color: #000000;
+  padding: 16px 0;
 }
 @media screen and (min-width: 768px) {
   .logo {
     margin-right: 87px;
+    padding: 0;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -435,24 +438,25 @@ body {
   .nav__contacts {
     color: var(--secondary-color-text);
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.1428571429;
+    font-size: 12px;
+    line-height: 1.1666666667;
     letter-spacing: 0.02em;
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
   .nav__contacts:hover, .nav__contacts:focus {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.1428571429;
-    letter-spacing: 0.02em;
+    color: var(--accent-color);
   }
 }
 @media screen and (min-width: 1200px) {
   .nav__contacts {
     display: flex;
     align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1428571429;
+    letter-spacing: 0.02em;
   }
 }
 
@@ -468,7 +472,6 @@ body {
   color: #212121;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   overflow: auto;
 }
 @media screen and (min-width: 768px) {
@@ -498,7 +501,10 @@ body {
   display: flex;
   flex-direction: column;
   gap: 36px;
-  margin-bottom: 302px;
+}
+
+.menu-contact-wrap {
+  margin: auto 0 64px 0;
 }
 
 .menu__link {
@@ -516,23 +522,20 @@ body {
 .menu__contact {
   margin-bottom: 32px;
 }
-.menu__contact:last-child {
-  margin-bottom: 64px;
+
+.menu__mail {
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.1764705882;
+  letter-spacing: 0.02em;
 }
 
 .menu__contacts {
   color: var(--secondary-color-text);
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.1428571429;
-  letter-spacing: 0.02em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), font 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.menu__contacts:hover, .menu__contacts:focus {
-  color: var(--accent-color);
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 1.1764705882;
+  font-size: 24px;
+  line-height: 1.1666666667;
   letter-spacing: 0.02em;
 }
 
@@ -549,7 +552,7 @@ body {
   color: var(--accent-color);
   position: relative;
 }
-.menu-soc-link::after {
+.menu-soc-link + .menu-soc-link::before {
   content: "";
   border: 1px solid rgba(33, 33, 33, 0.2);
   position: absolute;
@@ -561,11 +564,11 @@ body {
 
 .hero {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mobile.jpg);
-  max-width: 480px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   padding: 118px 0;
-  width: 100%;
   text-align: center;
-  margin: 0 auto;
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
@@ -575,9 +578,6 @@ body {
 @media screen and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-tablet.jpg);
-    max-width: 768px;
-    padding: 118px 0;
-    width: 100%;
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
@@ -590,7 +590,6 @@ body {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
     padding: 200px 0;
     max-width: 1600px;
-    text-align: center;
     margin: 0 auto;
   }
 }
