--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -112,7 +112,7 @@
     @include tablet {
 
         color: var(--secondary-color-text);
-        @include font (500, 14px, calc(16 / 14), 0.02em);
+        @include font (500, 12px, calc(14 / 12), 0.02em);
 
         transition-property: color;
         transition-duration: 250ms;
@@ -120,13 +120,14 @@
 
         &:hover,
         &:focus {
-            @include font (500, 14px, calc(16 / 14), 0.02em);
+            color: var(--accent-color);
         }
 
     }
 
     @include desktop {
         @include flex;
+        @include font (500, 14px, calc(16 / 14), 0.02em);
     }
 
 }
@@ -148,7 +149,6 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     overflow: auto;
 
     @include tablet {
@@ -181,7 +181,10 @@
     display: flex;
     flex-direction: column;
     gap: 36px;
-    margin-bottom: 302px;
+}
+
+.menu-contact-wrap {
+    margin: auto 0 64px 0;
 }
 
 .menu__link {
@@ -198,24 +201,16 @@
 
 .menu__contact {
     margin-bottom: 32px;
+}
 
-    &:last-child {
-        margin-bottom: 64px;
-    }
+.menu__mail {
+    color: var(--accent-color);
+    @include font (500, 34px, calc(40 / 34), 0.02em);
 }
 
 .menu__contacts {
     color: var(--secondary-color-text);
-    @include font (500, 14px, calc(16 / 14), 0.02em);
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), font 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
-    &:hover,
-    &:focus {
-        color: var(--accent-color);
-        @include font (500, 34px, calc(40 / 34), 0.02em);
-    }
+    @include font (500, 24px, calc(28 / 24), 0.02em);
 }
 
 .menu-soc {
@@ -229,7 +224,7 @@
     color: var(--accent-color);
     position: relative;
 
-    &::after {
+    &+&::before {
         content: "";
         border: 1px solid rgba(33, 33, 33, 0.2);
         position: absolute;
