--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,10 +1,11 @@
 .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mobile.jpg);
-    max-width: 480px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     padding: 118px 0;
-    width: 100%;
     text-align: center;
-    margin: 0 auto;
+
 
     @include retina {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mobile-2x.jpeg);
@@ -12,9 +13,8 @@
 
     @include tablet {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-tablet.jpg);
-        max-width: 768px;
-        padding: 118px 0;
-        width: 100%;
+
+
 
         @include retina {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-tablet-2x.jpeg);
@@ -26,7 +26,6 @@
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
         padding: 200px 0;
         max-width: 1600px;
-        text-align: center;
         margin: 0 auto;
 
         @include retina {
