--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,9 +4,11 @@
     font-style: normal;
     @include font (700, 24px, calc(28/24), 0.03em);
     color: #000000;
+    padding: 16px 0;
 
     @include tablet {
         margin-right: 87px;
+        padding: 0
     }
 
     @include desktop {
