--- a/sass/utils/_modal.scss
+++ b/sass/utils/_modal.scss
@@ -31,6 +31,10 @@
         transform: translate(-50%, -50%) scaleY(0) rotate(-15deg)
     }
 
+
+@include tablet {
+    
+}
     @include desktop {
         min-width: 528px;
         min-height: 581px;
@@ -168,6 +172,7 @@
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     margin: -1px;
+   
 }
 
 .check-text {
