--- a/sass/utils/_modal.scss
+++ b/sass/utils/_modal.scss
@@ -174,8 +174,17 @@
     margin: -1px;
    
 }
+.checkbox-wrap {
+   @media screen and (min-width: 320px) and (max-width: 479px){
+    max-width: 346px;
+   }
+}
 
 .check-text {
+    @media screen and (min-width: 320px) and (max-width: 479px){
+        width: 100%;
+       }
+
     @include flex;
     justify-content: center;
     gap: 8px;
