--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@
 .modal {
   max-width: 450px;
   min-height: 609px;
-  width: 90%;
+  width: 100%;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -30,13 +30,13 @@
   transform: translate(-50%, -50%) scaleY(1) rotate(0deg);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .modal {
+    width: 90%;
+  }
+}
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scaleY(0) rotate(-15deg);
-}
-@media screen and (min-width: 768px) {
-  .modal {
-    width: 100%;
-  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
