--- a/sass/utils/_modal.scss
+++ b/sass/utils/_modal.scss
@@ -14,7 +14,11 @@
 .modal {
     max-width: 450px;
     min-height: 609px;
+    width: 100%;
+
+    @media screen and (min-width: 320px) and (max-width: 479px){
     width: 90%;
+}
 
     background-color: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -31,10 +35,6 @@
         transform: translate(-50%, -50%) scaleY(0) rotate(-15deg)
     }
 
-
-@include tablet {
-    width: 100%;
-}
     @include desktop {
         min-width: 528px;
         min-height: 581px;
