--- a/css/main.css
+++ b/css/main.css
@@ -493,6 +493,7 @@ body {
   display: flex;
   flex-direction: column;
   overflow: auto;
+  justify-content: space-between;
 }
 @media screen and (min-width: 768px) {
   .mob-menu {
