--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -150,6 +150,7 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
+    justify-content: space-between;
 
     @include tablet {
         display: none;
@@ -223,6 +224,7 @@
     @media screen and (min-width: 320px) and (max-width: 479px) {
         display: flex;
         flex-wrap: wrap;
+        
     }
 
     display: flex;
