--- a/css/main.css
+++ b/css/main.css
@@ -493,7 +493,7 @@ body {
   display: flex;
   flex-direction: column;
   overflow: auto;
-  justify-content: space-between;
+  margin: auto 0;
 }
 @media screen and (min-width: 768px) {
   .mob-menu {
