--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -150,7 +150,8 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
-    justify-content: space-between;
+    margin: auto 0;
+    
 
     @include tablet {
         display: none;
