--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -194,6 +194,10 @@
     @include font (500, 40px, calc(47 / 40), 0.02em);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    @media screen and (min-width: 320px) and (max-width: 479px) {
+        @include font (500, 35px, calc(47 / 35), 0.02em);
+    }
+
 
     &:hover,
     &:focus {
@@ -224,8 +228,6 @@
     @media screen and (min-width: 320px) and (max-width: 479px) {
         display: flex;
         flex-wrap: wrap;
-        margin: auto 0;
-        
     }
 
     display: flex;
