--- a/css/main.css
+++ b/css/main.css
@@ -536,6 +536,14 @@ body {
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .menu__link {
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 1.3428571429;
+    letter-spacing: 0.02em;
+  }
+}
 .menu__link:hover, .menu__link:focus {
   color: var(--accent-color);
 }
@@ -577,7 +585,6 @@ body {
   .menu-soc {
     display: flex;
     flex-wrap: wrap;
-    margin: auto 0;
   }
 }
 
