--- a/css/main.css
+++ b/css/main.css
@@ -422,7 +422,7 @@ body {
     display: block;
     width: 100%;
     height: 4px;
-    background: #2196F3;
+    background: #2196f3;
     border-radius: 2px;
     opacity: 0;
     transform: scaleX(1.1);
@@ -492,7 +492,8 @@ body {
   color: #212121;
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow-y: scroll;
+  z-index: 1;
 }
 @media screen and (min-width: 768px) {
   .mob-menu {
@@ -521,6 +522,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 36px;
+  margin-bottom: 302px;
 }
 
 .menu-contact-wrap {
