--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,253 +1,238 @@
 .header {
-    border-bottom: 1px solid #ececec;
-
+  border-bottom: 1px solid #ececec;
 }
 
 .header--posihion {
-    @include flex;
+  @include flex;
 }
 
 .nav {
-    margin-right: auto;
+  margin-right: auto;
 }
 
 .nav__list {
-    display: none;
+  display: none;
 
-    @include tablet {
-        display: flex;
-        gap: 50px;
-    }
+  @include tablet {
+    display: flex;
+    gap: 50px;
+  }
 }
 
 .nav__list--posihion {
-    @include tablet {
-        flex-direction: column;
-        gap: 10px;
-    }
+  @include tablet {
+    flex-direction: column;
+    gap: 10px;
+  }
 
-    @include desktop {
-        flex-direction: row;
-        gap: 30px;
-
-
-    }
+  @include desktop {
+    flex-direction: row;
+    gap: 30px;
+  }
 }
 
 .nav__item {
-    @include flex;
-    color: var(--secondary-color-text);
-
+  @include flex;
+  color: var(--secondary-color-text);
 }
 
 .nav__link {
-    @include tablet {
-        position: relative;
-        display: block;
-        padding-top: 32px;
-        padding-bottom: 32px;
+  @include tablet {
+    position: relative;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
-        color: var(--main-color-text);
-        @include font (500, 14px, calc(16 / 14), 0.02em);
+    color: var(--main-color-text);
+    @include font(500, 14px, calc(16 / 14), 0.02em);
 
-        transition-property: color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-        &:hover,
-        &:focus {
-            color: var(--accent-color);
-        }
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
     }
+  }
 }
 
 .current {
-    @include tablet {
-        color: var(--accent-color);
+  @include tablet {
+    color: var(--accent-color);
 
-        &::after {
-            position: absolute;
-            bottom: 0;
-            content: "";
-            display: block;
-            width: 100%;
-            height: 4px;
-            background: #2196F3;
-            border-radius: 2px;
-            opacity: 0;
-            transform: scaleX(1.1);
-        }
+    &::after {
+      position: absolute;
+      bottom: 0;
+      content: "";
+      display: block;
+      width: 100%;
+      height: 4px;
+      background: #2196f3;
+      border-radius: 2px;
+      opacity: 0;
+      transform: scaleX(1.1);
     }
+  }
 }
 
 .nav__link.current::after {
-    @include tablet {
-        opacity: 1;
-    }
+  @include tablet {
+    opacity: 1;
+  }
 }
 
-
 .nav__icon {
-    @include tablet {
-        margin-right: 10px;
-        fill: currentColor;
+  @include tablet {
+    margin-right: 10px;
+    fill: currentColor;
+  }
 
-    }
-
-    @include desktop {
-        width: 16px;
-        height: 12px;
-
-    }
+  @include desktop {
+    width: 16px;
+    height: 12px;
+  }
 }
 
 .nav__icon--size {
-    @include desktop {
-        height: 16px;
-    }
+  @include desktop {
+    height: 16px;
+  }
 }
 
 .nav__contacts {
+  @include tablet {
+    color: var(--secondary-color-text);
+    @include font(500, 12px, calc(14 / 12), 0.02em);
 
-    @include tablet {
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-        color: var(--secondary-color-text);
-        @include font (500, 12px, calc(14 / 12), 0.02em);
-
-        transition-property: color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-        &:hover,
-        &:focus {
-            color: var(--accent-color);
-        }
-
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
     }
+  }
 
-    @include desktop {
-        @include flex;
-        @include font (500, 14px, calc(16 / 14), 0.02em);
-    }
-
+  @include desktop {
+    @include flex;
+    @include font(500, 14px, calc(16 / 14), 0.02em);
+  }
 }
 
 // ________MENU__________
 
 .mob-menu {
-    position: fixed;
+  position: fixed;
 
-    width: 100vw;
-    height: 100vh;
-    background-color: #ffffff;
-    top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+  top: 0;
 
-    padding-top: 48px;
-    padding-bottom: 48px;
-    padding-left: 40px;
-    color: #212121;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+  color: #212121;
 
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-    
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  z-index: 1;
 
-    @include tablet {
-        display: none;
-    }
+  @include tablet {
+    display: none;
+  }
 }
 
 .menu-close {
-    position: absolute;
-    top: 10px;
-    right: 15px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
 
-    background-color: transparent;
-    border: none;
+  background-color: transparent;
+  border: none;
 
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .menu-close-icon {
-    fill: currentColor;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    .menu-close:hover &,
-    .menu-close:focus & {
-        color: var(--accent-color);
-    }
+  .menu-close:hover &,
+  .menu-close:focus & {
+    color: var(--accent-color);
+  }
 }
 
 .menu__list {
-    display: flex;
-    flex-direction: column;
-    gap: 36px;
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+  margin-bottom: 302px;
 }
 
 .menu-contact-wrap {
-    margin: auto 0 64px 0;
-    width: 100%;
+  margin: auto 0 64px 0;
+  width: 100%;
 }
 
 .menu__link {
-    color: var(--main-color-text);
-    @include font (500, 40px, calc(47 / 40), 0.02em);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--main-color-text);
+  @include font(500, 40px, calc(47 / 40), 0.02em);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus {
-        color: var(--accent-color);
-    }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .menu__contact {
-    margin-bottom: 32px;
-    width: 100%;
+  margin-bottom: 32px;
+  width: 100%;
 }
 
 .menu__mail {
-    color: var(--accent-color);
-    @include font (500, 34px, calc(40 / 34), 0.02em);
+  color: var(--accent-color);
+  @include font(500, 34px, calc(40 / 34), 0.02em);
 
-    @media screen and (min-width: 320px) and (max-width: 479px) {
-        @include font (500, 30px, calc(40 / 30), 0.02em);
-    }
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    @include font(500, 30px, calc(40 / 30), 0.02em);
+  }
 }
 
 .menu__contacts {
-    color: var(--secondary-color-text);
-    @include font (500, 24px, calc(28 / 24), 0.02em);
+  color: var(--secondary-color-text);
+  @include font(500, 24px, calc(28 / 24), 0.02em);
 }
 
 .menu-soc {
-    @media screen and (min-width: 320px) and (max-width: 479px) {
-        display: flex;
-        flex-wrap: wrap;
-
-    }
-
+  @media screen and (min-width: 320px) and (max-width: 479px) {
     display: flex;
-    gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  display: flex;
+  gap: 20px;
 }
 
 .menu-soc-item {
+  &:not(:last-child)::after {
+    content: "";
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    bottom: 50%;
+    width: 22px;
+    height: 0px;
+    transform: rotate(90deg);
+    margin-left: 10px;
+  }
 
-
-    &:not(:last-child)::after {
-        content: "";
-        border: 1px solid rgba(33, 33, 33, 0.2);
-        bottom: 50%;
-        width: 22px;
-        height: 0px;
-        transform: rotate(90deg);
-        margin-left: 10px;
-
-    }
-
-    .menu-soc-link {
-        @include font (500, 18px, calc(22 / 18), 0.02em);
-        color: var(--accent-color);
-        width: 100%;
-    
-    }
+  .menu-soc-link {
+    @include font(500, 18px, calc(22 / 18), 0.02em);
+    color: var(--accent-color);
+    width: 100%;
+  }
 }
