--- a/sass/utils/_modal.scss
+++ b/sass/utils/_modal.scss
@@ -1,230 +1,227 @@
 .backdrop {
-    padding: 0px 15px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
-    transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1), visibility 300ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
+  padding: 0px 15px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .modal {
-    max-width: 450px;
-    min-height: 609px;
-    width: 100%;
+  max-width: 450px;
+  min-height: 609px;
+  width: 100%;
 
-    @media screen and (min-width: 320px) and (max-width: 479px){
+  @media screen and (min-width: 320px) and (max-width: 479px) {
     width: 90%;
-}
+  }
 
-    background-color: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    padding: 40px;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding: 40px;
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scaleY(1) rotate(0deg);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scaleY(1) rotate(0deg);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    .backdrop.is-hidden & {
-        transform: translate(-50%, -50%) scaleY(0) rotate(-15deg)
-    }
+  .backdrop.is-hidden & {
+    transform: translate(-50%, -50%) scaleY(0) rotate(-15deg);
+  }
 
-    @include desktop {
-        min-width: 528px;
-        min-height: 581px;
-    }
-
+  @include desktop {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal-close {
-    position: absolute;
-    top: 8px;
-    right: 8px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
 
-    @include flex;
-    justify-content: center;
+  @include flex;
+  justify-content: center;
 
-    background: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    color: #000000;
-    cursor: pointer;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  color: #000000;
+  cursor: pointer;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon {
-    fill: currentColor;
+  fill: currentColor;
 
-    .modal-close:hover &,
-    .modal-close:focus & {
-        color: var(--accent-color);
-    }
+  .modal-close:hover &,
+  .modal-close:focus & {
+    color: var(--accent-color);
+  }
 }
 
 .is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
-
 .modal-heading {
-    max-width: 448px;
-    margin-bottom: 12px;
-    @include font (700, 20px, calc(30 / 20), 0.03em);
-    text-align: center;
-    color: var(--main-color-text);
+  max-width: 448px;
+  margin-bottom: 12px;
+  @include font(700, 20px, calc(30 / 20), 0.03em);
+  text-align: center;
+  color: var(--main-color-text);
 
-    @include desktop {
-        @include font (700, 20px, calc(23 / 20), 0.03em);
-    }
+  @include desktop {
+    @include font(700, 20px, calc(23 / 20), 0.03em);
+  }
 }
 
 .modal-wrap {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .modal-label {
-    margin-bottom: 4px;
-    @include font (null, 12px, calc(14 / 12), 0.01em);
-    color: var(--secondary-color-text);
+  margin-bottom: 4px;
+  @include font(null, 12px, calc(14 / 12), 0.01em);
+  color: var(--secondary-color-text);
 }
 
 .modal-input {
-    padding-left: 42px;
-    padding-right: 12px;
-    max-width: 448px;
-    width: 100%;
-    height: 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    outline: none;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-left: 42px;
+  padding-right: 12px;
+  max-width: 448px;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:focus {
-        border: 1px solid var(--accent-color);
-    }
+  &:focus {
+    border: 1px solid var(--accent-color);
+  }
 }
 
 .modal-wrap-comment {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .modal-comment {
-    width: 100%;
-    height: 120px;
-    padding: 12px 16px;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
 
-    @include font (400, 12px, null, null);
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    resize: none;
-    outline: none;
+  @include font(400, 12px, null, null);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  outline: none;
 
-    &::placeholder {
-        @include font (400, 12px, calc(14 / 12), 0.01em);
-        color: rgba(117, 117, 117, 0.5);
-    }
+  &::placeholder {
+    @include font(400, 12px, calc(14 / 12), 0.01em);
+    color: rgba(117, 117, 117, 0.5);
+  }
 
-    &:focus {
-        border: 1px solid var(--accent-color);
-    }
+  &:focus {
+    border: 1px solid var(--accent-color);
+  }
 }
 
 .modal-name {
-    position: relative;
-    color: #212121;
+  position: relative;
+  color: #212121;
 }
 
 .modal-icon-input {
-    position: absolute;
-    top: 50%;
-    left: 12px;
-    fill: #212121;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  fill: #212121;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    .modal-input:focus+& {
-        fill: var(--accent-color);
-    }
+  .modal-input:focus + & {
+    fill: var(--accent-color);
+  }
 }
 
 .modal-checkbox {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .modal-check {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
-   
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 .checkbox-wrap {
-   @media screen and (min-width: 320px) and (max-width: 479px){
+  @media screen and (min-width: 320px) and (max-width: 479px) {
     max-width: 346px;
-   }
+  }
 }
 
 .check-text {
-    @media screen and (min-width: 320px) and (max-width: 479px){
-        width: 100%;
-       }
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    width: 100%;
+  }
 
-    @include flex;
-    justify-content: center;
-    gap: 8px;
+  @include flex;
+  justify-content: center;
+  gap: 8px;
 
-    @include font (null, 12px, calc(14 / 12), 0.03em);
-    color: var(--secondary-color-text);
+  @include font(null, 12px, calc(14 / 12), 0.03em);
+  color: var(--secondary-color-text);
 
-    @include desktop {
-        @include font (null, 14px, 1.71, 0.03em);
-    }
-
+  @include desktop {
+    @include font(null, 14px, 1.71, 0.03em);
+  }
 }
 
 .check-text span {
-    width: 16px;
-    height: 15px;
-    border: 2px solid #212121;
-    border-radius: 2px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: transparent;
-    @include flex;
-    justify-content: center;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: transparent;
+  @include flex;
+  justify-content: center;
 
-    .modal-check:checked+& {
-        background-color: var(--accent-color);
-        border: 1px solid var(--accent-color);
-        fill: #ffffff;
-    }
+  .modal-check:checked + & {
+    background-color: var(--accent-color);
+    border: 1px solid var(--accent-color);
+    fill: #ffffff;
+  }
 }
 
 .check-link {
-    color: var(--accent-color);
-    text-decoration: 1px underline var(--accent-color);
+  color: var(--accent-color);
+  text-decoration: 1px underline var(--accent-color);
 }
 
 .modal-button {
-    display: flex;
+  display: flex;
 }
 
 .modal-btn {
-    max-width: 200px;
-    padding: 10px 52px;
+  max-width: 200px;
+  padding: 10px 52px;
 }
